Added the new option (with comments) to bot.ini

--- a/bot.ini
+++ b/bot.ini
@@ -7,3 +7,6 @@ group_id = 25565
 group_token = laasakjd8adfoa38ra3aldsa83l3rlds83afaudpofualdug
 # your id (leave blank to enter public mode - it will accept requests from EVERYONE)
 my_id = 1000
+# params for the crawler. view your options with ./single-file --help
+# example: `crawler_params = --browser-mobile-emulation true` (effect is the same as just running `./single-file --browser-mobile-emulation true`)
+crawler_params =
